# AVrC_toolkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: python-package.yml
src/avrc/: __init__.py  cli.py
src/avrc/commands/: __init__.py  download.py  filter.py
src/avrc/utils/: __init__.py  metadata.py  seqkit.py  zenodo.py
tests/: conftest.py  test_cli.py
tests/commands/: test_filter.py
tests/utils/: test_metadata.py  test_seqkit.py
