# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avrc"
version = "0.1.0"
description = "AVrC (Aggregated Gut Viral Catalogue) toolkit for downloading and filtering viral sequences"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Alise Ponsero", email = "alise.ponsero@quadram.ac.uk" }
]
dependencies = [
    "click>=8.0.0",
    "pandas>=1.3.0",
    "requests>=2.25.0",
    "tqdm>=4.62.0",
    "urllib3>=2.0.0"
]

[project.scripts]
avrc = "avrc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/avrc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=avrc --cov-report=term-missing"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0"
]
